# rust-local-rag

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  how-to-use.md  justfile  setup.md
.cargo/: config.toml
docs/: RAG_EVALUATION_FRAMEWORK_SPEC.md  RERANKER_DEBUGGING_POSTMORTEM.md  how-to-use.md  per_query_weights_prd.md
eval/: README.md  __init__.py  eval_runner.py  metrics.py  pyproject.toml  rag_client.py  run.py
eval/configs/: baseline.yaml  embedding_only.yaml
eval/ground_truth/: README.md  queries.jsonl
eval/reports/: .gitkeep  BASELINE_EVALUATION_SUMMARY.md  EXPERT_CORPUS_EVALUATION.md
prompts/: reranker.txt
src/: embeddings.rs  job_manager.rs  main.rs  mcp_server.rs  progress_logger.rs  rag_engine.rs  reranker.rs  worker.rs
tests/: async_pdf.rs  exit_codes.rs
