[package]
name = "rust-local-rag"
version = "0.1.0"
edition = "2024"
authors = ["Mehmet Koray Sariteke"]
description = "A local RAG (Retrieval-Augmented Generation) MCP server built with Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/rust-local-rag"
keywords = ["rag", "ai", "llm", "embeddings", "pdf", "search", "mcp"]
categories = ["command-line-utilities"]

[[bin]]
name = "rust-local-rag"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["transport-io"] }
rmcp-macros = "0.1"
schemars = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "time",
    "env-filter",
] }
uuid = { version = "1.17", features = ["v4"] }
walkdir = "2.5"
dotenv = "0.15"
regex = "1.10"
