[package]
name = "rust-local-rag"
version = "0.1.0"
edition = "2024"
authors = ["Mehmet Koray Sariteke"]
description = "A local RAG (Retrieval-Augmented Generation) MCP server built with Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/rust-local-rag"
keywords = ["rag", "ai", "llm", "embeddings", "pdf", "search", "mcp"]
categories = ["command-line-utilities"]

[[bin]]
name = "rust-local-rag"
path = "src/main.rs"

[[bin]]
name = "rag-tui"
path = "src/bin/rag_tui/main.rs"

[dependencies]
# TUI dependencies
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
rmcp = { version = "0.8", features = ["transport-io", "transport-streamable-http-server"] }
rmcp-macros = "0.8"
schemars = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "time",
    "env-filter",
] }
uuid = { version = "1.17", features = ["v4"] }
walkdir = "2.5"
dotenv = "0.15"
sha2 = "0.10"
lru = "0.12"
futures = "0.3"
regex = "1"
srx = { version = "0.1", features = ["from_xml"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = "0.4"
urlencoding = "2.1"
lopdf = "0.34"

[dev-dependencies]
tempfile = "3.10"
